tests/test2/pass/test-print.m2
int main() {
	printInt(5);
	printFloat(9.9);
	printBool(true);
	return 0;
}

