tests/test2/fail/fail-matrixDim.m2
int main(){
	matrix int [2.1][9.2] m;

	return 0;
}